# vehicle-grid-integration-webapp

./: .gitignore  ADDING_A_NETWORK_MODEL.md  CHANGES.md  FEATURE_PLAN.md  FRONTEND_REDESIGN_HANDOFF.md  GITHUB_UPLOAD.md  HANDOVER.md  IMPROVEMENTS.md  LOCAL_SETUP.md  OPUS_IMPLEMENTATION_BRIEF.md  README.md  electric_vehicles-profile-template.csv
.claude/: launch.json
.github/workflows/: tests.yml
azure_funcs/: requirements.txt
deployment/: .env.example  Caddyfile  README.md  docker-compose.yml  web.dockerfile
docker_images/: vgi_api.dockerfile
event-frontend-v2/: dev-mock-api.js  package-lock.json  package.json  vue.config.js
event-frontend-v2/public/: index.html
event-frontend-v2/src/: main.js
event-frontend-v2/src/assets/: vgi_styles.css
event-frontend-v2/src/components/: GithubLink.vue  InputDetails.vue  NetworkExplorer.vue  SelectProfile.vue
event-frontend-v2/src/components/charts/: EvtChart.vue  MultiLineChart.vue  PhaseBandChart.vue  QuantileBandChart.vue  chartTheme.js  figureSeries.js
event-frontend-v2/src/layouts/: NavBar.vue
event-frontend-v2/src/router/: index.js
event-frontend-v2/src/views/: HowItWorks.vue  SimulateNetworkAPI.vue
infrastructure/terraform/: main.tf
regression_harness/: .gitignore  README.md  setup_v0_baseline_env.sh  vgi_regression.py
regression_harness/baselines/v0/: manifest.json  meta_endpoints.json
regression_harness/baselines/v0/rural_mixed_ev_hp/: lv_comparison.csv  meta.json  mv_voltages.csv  primary_loadings.csv  trn_powers.csv
regression_harness/baselines/v0/rural_nearsub_baseload/: lv_comparison.csv  meta.json  mv_voltages.csv  primary_loadings.csv  trn_powers.csv
regression_harness/baselines/v0/urban_csv_uploads/: lv_comparison.csv  meta.json  mv_voltages.csv  primary_loadings.csv  trn_powers.csv
regression_harness/baselines/v0/urban_lvlist_all_lcts_xfmr_oltc/: lv_comparison.csv  meta.json  mv_voltages.csv  primary_loadings.csv  trn_powers.csv
regression_harness/baselines/v0/urban_mixed_pv_hp/: lv_comparison.csv  meta.json  mv_voltages.csv  primary_loadings.csv  trn_powers.csv
regression_harness/baselines/v0/urban_mv_solar_fcs/: lv_comparison.csv  meta.json  mv_voltages.csv  primary_loadings.csv  trn_powers.csv
vgi_api/: README.md  pyproject.toml
vgi_api/scripts/: build_network_topology.py
vgi_api/tests/: conftest.py  test_api_validation.py  test_convergence.py  test_localrun.py  test_regressions.py  test_topology_builder.py  test_unbalance.py
vgi_api/vgi_api/: _bunch.py  azure_mockup.py  funcsDss_turing.py  funcsMath_turing.py  funcsPython_turing.py  funcsTuring.py  main.py
vgi_api/vgi_api/data/: network_topology_1060.json  network_topology_1061.json
vgi_api/vgi_api/validation/: __init__.py  network_ids.py  validators.py
(+10 files in other folders)
